<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.unal.bookswapp.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@mipmap/login_image"/>

        <EditText
            android:layout_margin="20dp"
            android:hint="@string/insert_email"
            android:inputType="textEmailAddress"
            android:id="@+id/emailTextEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_margin="20dp"
            android:hint="@string/insert_password"
            android:inputType="textPassword"
            android:id="@+id/passwordTextEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/loginButton"
            android:text="@string/sigin_normal"
            android:layout_gravity="center"
            android:layout_width="210dp"
            android:layout_height="wrap_content" />

        <com.shobhitpuri.custombuttons.GoogleSignInButton
            android:id="@+id/googleButton"
            android:layout_width="210dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/sigin_google"
            app:isDarkTheme="true" />

        <TextView
            android:id="@+id/registerText"
            android:text="@string/not_account"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            />


    </LinearLayout>


</RelativeLayout>