<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBlue">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="-10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"/>

                <EditText
                    android:inputType="text"
                    android:textSize="@dimen/et_text_size"
                    android:backgroundTint="@color/colorLightBlue"
                    android:id="@+id/et_new_offer_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="-10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/author"/>

                <EditText
                    android:inputType="text"
                    android:textSize="@dimen/et_text_size"
                    android:backgroundTint="@color/colorLightBlue"
                    android:id="@+id/et_new_offer_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="-10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"/>

                <EditText
                    android:inputType="textMultiLine"
                    android:gravity="top"
                    android:textSize="@dimen/et_text_size"
                    android:backgroundTint="@color/colorLightBlue"
                    android:id="@+id/et_new_offer_description"
                    android:layout_width="match_parent"
                    android:layout_height="80dp" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/photo"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:id="@+id/ib_new_offer"
                        android:layout_centerInParent="true"
                        android:background="@android:drawable/ic_menu_gallery"
                        android:layout_width="50dp"
                        android:layout_height="50dp"/>
                    <ImageView
                        android:visibility="gone"
                        android:id="@+id/iv_new_offer"
                        android:layout_width="150dp"
                        android:layout_height="200dp"
                        android:layout_centerInParent="true"/>
                    <ProgressBar
                        android:id="@+id/pb_new_offer"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true" />
                </RelativeLayout>

                <Button
                    android:id="@+id/bt_new_offer_register"
                    android:text="@string/create_offer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>

</RelativeLayout>